# appleNativeImageLibs

./: .gitignore  README.md  analyze_fp16_failures.py  analyze_fp16_failures_final.py  analyze_fp16_failures_part2.py  analyze_fp16_failures_part3.py  benchmark_cpu.py  benchmark_rtmpose_coreml.py  benchmark_yolo_coreml.py  convert_dwpose_m.py  convert_rtmpose_coreml.py  convert_rtmpose_mixed.py  debug_masks.py  debug_rtmpose.py  generate_baselines.py  handtracking-bugs.md  inspect_rtmpose.py  main.py  performance-investigations.md  porting-plan.md  profile_pipeline.py  pyproject.toml  realtime_pipeline.py  test_fp16_accuracy.py  test_fullframe_pose.py  validate_pipeline.py  validate_rtmpose_coreml.py  validate_yolo_coreml.py  vision_hand_pose_broken_sonoma.md
swift-pipeline/: Package.swift  bundle.sh  dist-README.md  vision-app-plan.md
swift-pipeline/Sources/: bench_standalone.swift  main.swift
swift-pipeline/Sources/Benchmark/: bench_two_process.swift  main.swift
swift-pipeline/Sources/CameraApp/: CameraApp.swift
swift-pipeline/Sources/HandPoseInvestigation/: HandPoseInvestigation.swift
swift-pipeline/Sources/HandPoseMatrix/: main.swift
swift-pipeline/Sources/HandPoseReplay/: main.swift
swift-pipeline/Sources/Shared/: Constants.swift  PixelBufferUtils.swift  PoseProcessor.swift  YOLOProcessor.swift
swift-pipeline/Sources/SyphonHandPoseProbe/: main.swift
swift-pipeline/Sources/SyphonVideoPublisher/: main.swift
swift-pipeline/Sources/VisionApp/: README.md  (+4 more)
tools/: analyze_hand_pose_replay.py
vision-standalone/: Package.swift  bundle.sh  dist-README.md
(+4 files in other folders)
